[package]
name = "dom-builder-microsoft-fast"
version = "0.1.0"
publish = false
description = "Hacking around with Microsoft FAST web components"
edition = "2018"
license-file = "../../../../LICENSE-MIT"
repository = "https://github.com/anp/moxie.git"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = [ "cdylib" ]

[dependencies]
moxie = { path = "../../.." }
moxie-dom = { path = "../../" }
wasm-bindgen = "0.2"
